adicao dos novos campos na tabela employees no swagger output
